ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/CnP_PaaS__PackageVersion__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Package Version</label>
    <nameField>
        <label>PackageVersion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Package Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>