ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/fields/CnP_PaaS__Appexchange_Link__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Appexchange_Link__c</fullName>
    <label>Appexchange Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>