ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/fields/CnP_PaaS__Forum__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Forum__c</fullName>
    <label>Forum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>