ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/fields/CnP_PaaS__Manual__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Manual__c</fullName>
    <label>Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>