ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/fields/CnP_PaaS__Namespace__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>