ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__PackageVersion__c/fields/CnP_PaaS__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Version_Number__c</fullName>
    <label>Installed Version Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>